--- a/game002-slizzle/slizzle.html
+++ b/game002-slizzle/slizzle.html
@@ -10,7 +10,36 @@
 
   <body>
     <div id="frame">
-      <div id="game" onclick="GAME?.slide(event)">
+              <div id="settings" popover>
+          <menu>
+            <li>
+              <label><input id="tile-nums" type="checkbox" />Tile nums</label>
+            </li>
+            <li>
+              <label
+                ><input
+                  id="grid3"
+                  type="radio"
+                  name="size"
+                  value="3"
+                  onchange="GAME?.changeGrid(value)"
+                  checked
+                />3x3</label
+              >
+            </li>
+            <li>
+              <label
+                ><input id="grid4" type="radio" name="size" value="4" onchange="GAME?.changeGrid(value)" />4x4</label
+              >
+            </li>
+            <li>
+              <label
+                ><input id="grid5" type="radio" name="size" value="5" onchange="GAME?.changeGrid(value)" />5x5</label
+              >
+            </li>
+          </menu>
+        </div>
+<div id="game" onclick="GAME?.slide(event)">
         <!-- <div id="t1" class="tile row-1 col-1"></div>
         <div id="t2" class="tile row-1 col-2"></div>
         <div id="t3" class="tile row-1 col-3"></div>
@@ -26,22 +55,6 @@
         <span id="time-display">00:00</span>
         <button id="start-button" onclick="GAME?.initialize()">Start</button>
         <button id="options-button" popovertarget="settings">Settings</button>
-        <div id="settings" popover>
-          <menu>
-            <li>
-              <label><input id="tile-nums" type="checkbox" />Tile nums</label>
-            </li>
-            <li>
-              <label><input type="radio" name="size" value="3" onchange="GAME?.changeGrid(value)" checked />3x3</label>
-            </li>
-            <li>
-              <label><input type="radio" name="size" value="4" onchange="GAME?.changeGrid(value)" />4x4</label>
-            </li>
-            <li>
-              <label><input type="radio" name="size" value="5" onchange="GAME?.changeGrid(value)" />5x5</label>
-            </li>
-          </menu>
-        </div>
       </div>
     </div>
   </body>
