style(game002): clear comments

--- a/game002-slizzle/slizzle.html
+++ b/game002-slizzle/slizzle.html
@@ -37,17 +37,7 @@
           </li>
         </menu>
       </div>
-      <div id="game" onclick="GAME?.slide(event)">
-        <!-- <div id="t1" class="tile row-1 col-1"></div>
-        <div id="t2" class="tile row-1 col-2"></div>
-        <div id="t3" class="tile row-1 col-3"></div>
-        <div id="t4" class="tile row-2 col-1"></div>
-        <div id="t5" class="tile row-2 col-2"></div>
-        <div id="t6" class="tile row-2 col-3"></div>
-        <div id="t7" class="tile row-3 col-1"></div>
-        <div id="t8" class="tile row-3 col-2"></div>
-        <div id="t9" class="tile row-3 col-3"></div> -->
-      </div>
+      <div id="game" onclick="GAME?.slide(event)"></div>
       <div id="menu">
         <span><output id="move-count">0</output></span>
         <span id="time-display">00:00</span>
