--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>NanoGames</title>
   </head>
+
   <body>
     <h1>NanoGames</h1>
-    <ol>
-      <li><a href="./game001-snake/snake.html">Snake</a></li>
-      <li><a href="./game002-slizzle/slizzle.html">Slizzle &mdash; slide puzzle</a></li>
-    </ol>
+    <div class="game-list">
+      <a class="game-link" href="./game001/snake.html"> 001. <b>Wunsz</b></a>
+      <a class="game-link" href="./game002/slizzle.html">002. <b>Slizzle</b></a>
+    </div>
   </body>
 </html>
